--- a/src/pages/ExchangeRates/ExchangeRates.module.scss
+++ b/src/pages/ExchangeRates/ExchangeRates.module.scss
@@ -4,3 +4,51 @@
 .container{
    @include container;
 }
+
+.title{
+   padding-top: 50px;
+   text-align: center;
+   font-size: 35px;
+   font-weight: 600;
+}
+
+.rates__list{
+   margin-top: 30px;
+   height: 500px;
+   text-align: center;
+   width: 100%;
+   overflow-y: scroll;
+
+   &__item{
+      padding: 20px 0;
+
+      span{
+         font-weight: 600;
+      }
+   }
+}
+
+.rates__button{
+   padding: 30px 0 0 0;
+   text-align: center;
+}
+
+.rates__link{
+   text-align: center;
+   padding: 40px 0 0 0;
+
+   a{
+      display: inline-block;
+      width: 150px;
+      border-radius: 5px;
+     color: white;
+      background-color: DeepSkyBlue;
+      line-height: 40px;
+      font-size: 18px;
+      transition: .3s all ease;
+
+      &:hover{
+         background-color: DodgerBlue;
+      }
+   }
+}
