--- a/src/pages/Converter/Converter.module.scss
+++ b/src/pages/Converter/Converter.module.scss
@@ -6,10 +6,7 @@
 }
 
 .title{
-   padding-top: 50px;
-   text-align: center;
-   font-size: 35px;
-   font-weight: 600;
+  @include title;
 }
 
 .coverter__input{
@@ -40,21 +37,5 @@
 }
 
 .converter__link{
-   text-align: center;
-   padding: 40px 0 0 0;
-
-   a{
-      display: inline-block;
-      width: 150px;
-      border-radius: 5px;
-     color: white;
-      background-color: DeepSkyBlue;
-      line-height: 40px;
-      font-size: 18px;
-      transition: .3s all ease;
-
-      &:hover{
-         background-color: DodgerBlue;
-      }
-   }
+   @include linkButton();  
 }
