--- a/src/pages/ExchangeRates/ExchangeRates.module.scss
+++ b/src/pages/ExchangeRates/ExchangeRates.module.scss
@@ -6,10 +6,7 @@
 }
 
 .title{
-   padding-top: 50px;
-   text-align: center;
-   font-size: 35px;
-   font-weight: 600;
+  @include title();
 }
 
 .rates__list{
@@ -17,7 +14,7 @@
    height: 500px;
    text-align: center;
    width: 100%;
-   overflow-y: scroll;
+   overflow-y: auto;
 
    &__item{
       padding: 20px 0;
@@ -34,21 +31,5 @@
 }
 
 .rates__link{
-   text-align: center;
-   padding: 40px 0 0 0;
-
-   a{
-      display: inline-block;
-      width: 150px;
-      border-radius: 5px;
-     color: white;
-      background-color: DeepSkyBlue;
-      line-height: 40px;
-      font-size: 18px;
-      transition: .3s all ease;
-
-      &:hover{
-         background-color: DodgerBlue;
-      }
-   }
+   @include linkButton();
 }
